first task 2nd commit

--- a/page1.html
+++ b/page1.html
@@ -9,8 +9,9 @@
 <body>
     <header class = "header">
         <nav>
-            <h2>FoodWeb</h2>
+            <img src="logo.avif" alt="logo" class="logo">
             <ul>
+                
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">About</a></li>
@@ -21,7 +22,7 @@
     <div class="container">
         <aside class="sidebar">
             <nav>
-                <h2>types of food</h2>
+                <h2>Menu</h2>
                 <ul>
                     <li><a href="#">Appetizers</a></li>
                     <li><a href="#">Main Courses</a></li>
